--- a/web-page/css/styles.css
+++ b/web-page/css/styles.css
@@ -142,6 +142,44 @@ input[type="range"], input[type="number"] {
     margin-bottom: 10px;
 }
 
+/* Legend Styling */
+#legend {
+    position: relative;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+}
+
+#legend h2 {
+    margin: 0;
+    font-size: 1.2em;
+    color: #333;
+}
+
+#legend ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0 0;
+    color: #333
+}
+
+#legend li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+    color: #333
+}
+
+.legend-color {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    border-radius: 4px;
+    border: 1px solid #333;
+}
+
 /* General Button Styling */
 button {
     margin-top: 10px;
